Bug 485602 - Jog/Shuttle settings dialog just shows disabled under Windows.
Summary: Jog/Shuttle settings dialog just shows disabled under Windows.
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 24.02.2
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-15 17:19 UTC by Gabriel Gazzán
Modified: 2024-05-08 05:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Gazzán 2024-04-15 17:19:00 UTC
SUMMARY
Configure Kdenlive > Jog/Shuttle > section just shows "disabled" settings under Windows. Even though the device is working normally.
It's more of a UX thing; it'd be nice to notice users that, under Windows, Kdenlive has no functional options for these kind of devices, but instead they are supposed to use the device driver's own options.
Tested on Contour ShuttleXpress, Windows 11, all Kdenlive versions (including trunk).

STEPS TO REPRODUCE
1. Configure Kdenlive > Jog / Shuttle

OBSERVED RESULT
All shown options are disabled, with no other guiding text.

EXPECTED RESULT
A. Show a warning text saying that, under Windows, device configuration should be done through the driver's interface.
B. I don't know if it's possible, but any kind of device detection status flag would also be a nice touch.
Comment 1 Bug Janitor Service 2024-04-27 13:25:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kdenlive/-/merge_requests/501
Comment 2 Jean-Baptiste Mardelle 2024-05-07 18:20:19 UTC
Git commit 37744c04a686e23f94dac08730976913d8344b42 by Jean-Baptiste Mardelle, on behalf of Eugen Mohr.
Committed on 07/05/2024 at 18:20.
Pushed by mardelle into branch 'master'.

JogShuttle, add note and link for installation on Windows

M  +4    -0    src/dialogs/kdenlivesettingsdialog.cpp

https://invent.kde.org/multimedia/kdenlive/-/commit/37744c04a686e23f94dac08730976913d8344b42
Comment 3 Gabriel Gazzán 2024-05-08 05:19:46 UTC
Thank you!! :)