JogShuttle, add note and link for installation on Windows

BUG: 485602